--- a/src/main/flex/com/rollerderbyproductions/jamtracker/views/popup/About.mxml
+++ b/src/main/flex/com/rollerderbyproductions/jamtracker/views/popup/About.mxml
@@ -100,7 +100,7 @@
 							often to remain up-to-date with the latest JamTracker news.It is Roller Derby Production's goal to make JamTracker the world's premier computer based Roller Derby Scoring solution.
 							However, we do not expect to achieve this without the important feedback of you and our users.
 							Please send your comments and suggestions to <s:a id="link2" href="mailto:jamtracker@rollerderbyproductions.com">jamtracker@rollerderbyproductions.com</s:a>.
-							If you prefer, you may also review current and open new issues directly using our JIRA system by <s:a id="link3" href="http://jira.cybertie.net/jira/secure/BrowseProject.jspa#selectedTab=com.atlassian.jira.plugin.system.project%3Aissues-panel" target="_blank">clicking here</s:a>. 
+							If you prefer, you may also review current and open new issues directly using our Issue Traching system by <s:a id="link3" href="https://bitbucket.org/stheisen/jamtracker/issues" target="_blank">clicking here</s:a>. 
 							Thank you for your interest in JamTracker, and we look forward to hearing from you!
 							
 							<s:p textIndent="0"/>Special thanks to <s:a id="link4" href="http://neorollerderby.com" target="_blank">NEO Roller Derby</s:a>, Rosa Mariposa, Captain Celt-Lick, Kill C. Grammar, Iconoclast and Percy Q-Tion.
